# G4HypHIatFRS

./: .gitignore  CMakeLists.txt  G4Acc.C  HypHIFRS_MC.cc  HypHIMC_ParInput.txt  README.md  run2.mac
include/: HypHIFrsActionInitialization.hh  HypHIFrsAnalysis.hh  HypHIFrsDetectorConstruction.hh  HypHIFrsEventAction.hh  HypHIFrsGeometryController.hh  HypHIFrsMagneticField.hh  HypHIFrsPhysicsList.hh  HypHIFrsPrimaryGeneratorAction.hh  HypHIFrsRunAction.hh  HypHIFrsRunData.hh  HypHIFrsStackingAction.hh  HypHIFrsSteppingAction.hh  HypHIFrsUTrackerHit.hh  HypHIPhase0DetectorConstruction.hh  HypHIVDetectorConstruction.hh  HypernuclearPhysics.hh  THypHi_Event.hh  THypHi_Par.hh  THypHi_ParCreator.hh  THypHi_PhysicsList.hh  THypHi_SensetiveD.hh  THypHi_UTrackerHit.hh  THypHi_linkdef.h
src/: HypHIFrsActionInitialization.cc  HypHIFrsDetectorConstruction.cc  HypHIFrsEventAction.cc  HypHIFrsGeometryController.cc  HypHIFrsMagneticField.cc  HypHIFrsPhysicsList.cc  HypHIFrsPrimaryGeneratorAction.cc  HypHIFrsRunAction.cc  HypHIFrsRunData.cc  HypHIFrsStackingAction.cc  HypHIFrsSteppingAction.cc  HypHIFrsUTrackerHit.cc  HypHIPhase0DetectorConstruction.cc  HypHIVDetectorConstruction.cc  HypernuclearPhysics.cc  TH3L.cc  TH4L.cc  THe4L.cc  THypHi_Event.cc  THypHi_Par.cc  THypHi_ParCreator.cc  THypHi_PhysicsList.cc  THypHi_SensetiveD.cc  THypHi_UTrackerHit.cc
